# kvsplusplus

./: .gitignore  CLI_README.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  TCP_PROTOCOL.md
include/kvstore/: TCPServer.hpp
include/kvstore/cli/: CLI.hpp
include/kvstore/core/: KeyValueStore.hpp  StoreManager.hpp  TypeRegistry.hpp  ValueObject.hpp
include/kvstore/exceptions/: Exceptions.hpp
include/kvstore/net/: TCPServer.hpp
include/kvstore/persistence/: PersistenceManager.hpp
include/kvstore/utils/: Helpers.hpp
src/: TCPServer.cpp  cli_main.cpp  demo_main.cpp  main.cpp  single_cmd_main.cpp  tcp_main.cpp  tests_main.cpp
src/cli/: CLI.cpp
src/core/: KeyValueStore.cpp  StoreManager.cpp  TypeRegistry.cpp  ValueObject.cpp
src/net/: TCPServer.cpp
src/persistence/: PersistenceManager.cpp
src/utils/: Helpers.cpp
store/: demo_store.json  store.json
